# apex-legends-voicelines

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
apex_legends_voicelines/: __main__.py
apex_legends_voicelines/assets/: voicelines.json
tests/: test_apex_legends_voicelines.py
